--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1D4221;
+    background-color: black;
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
     display: flex;
@@ -10,7 +10,7 @@ body {
 }
 
 button {
-    background-color: #64A712;
+    background-color:blue;
     color: white;
     font-family: "Bai Jamjuree", sans-serif;
 }
@@ -25,7 +25,7 @@ button {
 
 main {
     text-align: center;
-    max-width: 90%;
+    max-width: 120%;
 }
 
 img {
